# ctpmarketdatacollector

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeLists_old.txt  CMakeSettings.json  LICENSE  Makefile  Makefile~  contractTime.ini  make.bat
doc/: CTP-API接口说明.chw  contractMap.json  contractTime.ini  example.json  inst-utc8.json  inst-utf8.json  inst.json  loadCsvToMongo.py  make.bat  mkdocs.yml  setting.ini  合约时间表.txt
doc/docs/: index.md
src/: .editorconfig  CMakeLists.txt  main.cpp
src/collector/: ctpmarketdatacollector.cpp  ctpmarketdatacollector.h
src/datasource/: ctpmarkerdata.cpp  ctpmarkerdata.h  ctpmdspi.cpp  ctpmdspi.h  ctptdspi .h  ctptdspi.cpp  ctptdspi.h  mdspi.h
src/datastore/: mongostore.cpp  mongostore.h
src/utils/: datehelper.h  global.cpp  global.h  logger.h  schemadefine.h  scopeguard.h  spinlock.h  structures.h
third/cmake/json-schema-validator/: CMakeLists.txt
third/cmake/json-schema-validator/src/: json-schema.hpp
third/include/sfitctp/: ThostFtdcMdApi.h  ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h  error.dtd  error.xml
third/include/spdlog/: tweakme.h
